@@ -4,6 +4,8 @@
 
 // [[Rcpp::depends(tidyCpp)]]
 
+// updated to use R::Protect in lieu of R::Shield
+
 // basic example from WRE:
 //   Here is a small example of creating an R numeric vector in C code:
 
@@ -20,7 +22,7 @@
 
 // [[Rcpp::export]]
 SEXP vectorExample() {
-    R::Shield ab( R::allocVectorNumeric(2) );
+    R::Protect ab( R::allocVectorNumeric(2) );
     R::numericPointer(ab)[0] = 123.45;
     R::numericPointer(ab)[1] = 67.89;
     return ab;
